Fix affix so it doesn't jump

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,10 +3,10 @@
 }
 .affix {
   width: 300px;
-  top: 40px;
+  top: 0px;
 }
 
-.sidebar {
+.sidenav {
   padding-left: 20px;
   padding-top: 40px;
 }
